manifests/cozyboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cozyboard
  namespace: cozyboard
  labels:
    app.kubernetes.io/name: cozyboard
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: cozyboard
